implemented AgsPitch2xAliasUtil and AgsPitch4xAliasUtil

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -325,6 +325,57 @@ ags_program_control_name_key_manager_get_obj_mutex
 ags_program_control_name_key_manager_find_program
 ags_program_control_name_key_manager_get_instance
 ags_program_control_name_key_manager_new
+ags_pitch_4x_alias_util_get_type
+ags_pitch_4x_alias_util_alloc
+ags_pitch_4x_alias_util_copy
+ags_pitch_4x_alias_util_free
+ags_pitch_4x_alias_util_get_source
+ags_pitch_4x_alias_util_set_source
+ags_pitch_4x_alias_util_get_source_stride
+ags_pitch_4x_alias_util_set_source_stride
+ags_pitch_4x_alias_util_get_destination
+ags_pitch_4x_alias_util_set_destination
+ags_pitch_4x_alias_util_get_destination_stride
+ags_pitch_4x_alias_util_set_destination_stride
+ags_pitch_4x_alias_util_get_buffer_length
+ags_pitch_4x_alias_util_set_buffer_length
+ags_pitch_4x_alias_util_get_format
+ags_pitch_4x_alias_util_set_format
+ags_pitch_4x_alias_util_get_samplerate
+ags_pitch_4x_alias_util_set_samplerate
+ags_pitch_4x_alias_util_get_base_key
+ags_pitch_4x_alias_util_set_base_key
+ags_pitch_4x_alias_util_get_tuning
+ags_pitch_4x_alias_util_set_tuning
+ags_pitch_4x_alias_util_get_vibrato_enabled
+ags_pitch_4x_alias_util_set_vibrato_enabled
+ags_pitch_4x_alias_util_get_vibrato_gain
+ags_pitch_4x_alias_util_set_vibrato_gain
+ags_pitch_4x_alias_util_get_vibrato_lfo_depth
+ags_pitch_4x_alias_util_set_vibrato_lfo_depth
+ags_pitch_4x_alias_util_get_vibrato_lfo_freq
+ags_pitch_4x_alias_util_set_vibrato_lfo_freq
+ags_pitch_4x_alias_util_get_vibrato_tuning
+ags_pitch_4x_alias_util_set_vibrato_tuning
+ags_pitch_4x_alias_util_get_vibrato_lfo_offset
+ags_pitch_4x_alias_util_set_vibrato_lfo_offset
+ags_pitch_4x_alias_util_get_frame_count
+ags_pitch_4x_alias_util_set_frame_count
+ags_pitch_4x_alias_util_get_offset
+ags_pitch_4x_alias_util_set_offset
+ags_pitch_4x_alias_util_get_note_256th_mode
+ags_pitch_4x_alias_util_set_note_256th_mode
+ags_pitch_4x_alias_util_get_offset_256th
+ags_pitch_4x_alias_util_set_offset_256th
+ags_pitch_4x_alias_util_pitch_s8
+ags_pitch_4x_alias_util_pitch_s16
+ags_pitch_4x_alias_util_pitch_s24
+ags_pitch_4x_alias_util_pitch_s32
+ags_pitch_4x_alias_util_pitch_s64
+ags_pitch_4x_alias_util_pitch_float
+ags_pitch_4x_alias_util_pitch_double
+ags_pitch_4x_alias_util_pitch_complex
+ags_pitch_4x_alias_util_pitch
 ags_recycling_get_type
 ags_recycling_flags_get_type
 ags_recycling_get_obj_mutex
@@ -3491,6 +3542,57 @@ ags_automation_find_specifier_with_type_and_line
 ags_automation_filter
 ags_automation_get_value
 ags_automation_new
+ags_pitch_2x_alias_util_get_type
+ags_pitch_2x_alias_util_alloc
+ags_pitch_2x_alias_util_copy
+ags_pitch_2x_alias_util_free
+ags_pitch_2x_alias_util_get_source
+ags_pitch_2x_alias_util_set_source
+ags_pitch_2x_alias_util_get_source_stride
+ags_pitch_2x_alias_util_set_source_stride
+ags_pitch_2x_alias_util_get_destination
+ags_pitch_2x_alias_util_set_destination
+ags_pitch_2x_alias_util_get_destination_stride
+ags_pitch_2x_alias_util_set_destination_stride
+ags_pitch_2x_alias_util_get_buffer_length
+ags_pitch_2x_alias_util_set_buffer_length
+ags_pitch_2x_alias_util_get_format
+ags_pitch_2x_alias_util_set_format
+ags_pitch_2x_alias_util_get_samplerate
+ags_pitch_2x_alias_util_set_samplerate
+ags_pitch_2x_alias_util_get_base_key
+ags_pitch_2x_alias_util_set_base_key
+ags_pitch_2x_alias_util_get_tuning
+ags_pitch_2x_alias_util_set_tuning
+ags_pitch_2x_alias_util_get_vibrato_enabled
+ags_pitch_2x_alias_util_set_vibrato_enabled
+ags_pitch_2x_alias_util_get_vibrato_gain
+ags_pitch_2x_alias_util_set_vibrato_gain
+ags_pitch_2x_alias_util_get_vibrato_lfo_depth
+ags_pitch_2x_alias_util_set_vibrato_lfo_depth
+ags_pitch_2x_alias_util_get_vibrato_lfo_freq
+ags_pitch_2x_alias_util_set_vibrato_lfo_freq
+ags_pitch_2x_alias_util_get_vibrato_tuning
+ags_pitch_2x_alias_util_set_vibrato_tuning
+ags_pitch_2x_alias_util_get_vibrato_lfo_offset
+ags_pitch_2x_alias_util_set_vibrato_lfo_offset
+ags_pitch_2x_alias_util_get_frame_count
+ags_pitch_2x_alias_util_set_frame_count
+ags_pitch_2x_alias_util_get_offset
+ags_pitch_2x_alias_util_set_offset
+ags_pitch_2x_alias_util_get_note_256th_mode
+ags_pitch_2x_alias_util_set_note_256th_mode
+ags_pitch_2x_alias_util_get_offset_256th
+ags_pitch_2x_alias_util_set_offset_256th
+ags_pitch_2x_alias_util_pitch_s8
+ags_pitch_2x_alias_util_pitch_s16
+ags_pitch_2x_alias_util_pitch_s24
+ags_pitch_2x_alias_util_pitch_s32
+ags_pitch_2x_alias_util_pitch_s64
+ags_pitch_2x_alias_util_pitch_float
+ags_pitch_2x_alias_util_pitch_double
+ags_pitch_2x_alias_util_pitch_complex
+ags_pitch_2x_alias_util_pitch
 ags_peak_util_get_type
 ags_peak_util_alloc
 ags_peak_util_copy
