--- a/ags/meson.build
+++ b/ags/meson.build
@@ -378,6 +378,8 @@ libags_audio_sources = files(
   'audio/ags_pattern.c',
   'audio/ags_peak_util.c',
   'audio/ags_phase_shift_util.c',
+  'audio/ags_pitch_2x_alias_util.c',
+  'audio/ags_pitch_4x_alias_util.c',
   'audio/ags_pitch_16x_alias_util.c',
   'audio/ags_playback.c',
   'audio/ags_playback_domain.c',
@@ -1532,6 +1534,8 @@ libags_audio_audio_headers = [
   'audio/ags_pattern.h',
   'audio/ags_peak_util.h',
   'audio/ags_phase_shift_util.h',
+  'audio/ags_pitch_2x_alias_util.h',
+  'audio/ags_pitch_4x_alias_util.h',
   'audio/ags_pitch_16x_alias_util.h',
   'audio/ags_playback.h',
   'audio/ags_playback_domain.h',
