implemented pitch type selection of ags-fx-sf2-synth and ags-fx-sfz-synth

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -2687,6 +2687,7 @@ ags_wah_wah_util_compute_complex
 ags_wah_wah_util_compute
 ags_synth_oscillator_mode_get_type
 ags_synth_key_mode_get_type
+ags_pitch_type_mode_get_type
 ags_frequency_aliase_util_get_type
 ags_frequency_aliase_util_alloc
 ags_frequency_aliase_util_copy
