fixed faster wave clipboard

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -2162,8 +2162,12 @@ ags_wave_remove_region_from_selection
 ags_wave_add_all_to_selection
 ags_wave_copy_selection
 ags_wave_cut_selection
+ags_wave_copy_selection_as_base64
+ags_wave_cut_selection_as_base64
 ags_wave_insert_from_clipboard
 ags_wave_insert_from_clipboard_extended
+ags_wave_insert_base64_from_clipboard
+ags_wave_insert_base64_from_clipboard_extended
 ags_wave_new
 ags_fluid_util_get_type
 ags_fluid_phase_set
