implemented ags_recall_midi2_control_change()

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -663,6 +663,8 @@ ags_audio_get_audio_start_mapping
 ags_audio_set_audio_start_mapping
 ags_audio_get_midi_start_mapping
 ags_audio_set_midi_start_mapping
+ags_audio_get_midi_group
+ags_audio_set_midi_group
 ags_audio_get_midi_channel
 ags_audio_set_midi_channel
 ags_audio_get_numerator
