--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -554,6 +554,7 @@ ags_marker_get_data
 ags_marker_set_data
 ags_marker_duplicate
 ags_marker_new
+ags_audio_buffer_util_alloc
 ags_resample_util_get_type
 ags_resample_util_alloc
 ags_resample_util_init
@@ -805,10 +806,14 @@ ags_peak_util_compute_float
 ags_peak_util_compute_double
 ags_peak_util_compute_complex
 ags_peak_util_compute
+ags_audio_buffer_util_alloc
+ags_resample_util_alloc
+ags_fluid_interpolate_4th_order_util_alloc
+ags_volume_util_alloc
 ags_sf2_synth_util_get_type
 ags_sf2_synth_util_loop_mode_get_type
 ags_sf2_synth_util_alloc
-ags_sf2_synth_util_boxed_copy
+ags_sf2_synth_util_copy
 ags_sf2_synth_util_free
 ags_sf2_synth_util_get_sf2_file
 ags_sf2_synth_util_set_sf2_file
@@ -936,6 +941,10 @@ ags_lfo_synth_util_get_offset
 ags_lfo_synth_util_set_offset
 ags_lfo_synth_util_get_frame_count
 ags_lfo_synth_util_set_frame_count
+ags_lfo_synth_util_get_note_256th_mode
+ags_lfo_synth_util_set_note_256th_mode
+ags_lfo_synth_util_get_offset_256th
+ags_lfo_synth_util_set_offset_256th
 ags_lfo_synth_util_compute_sin_s8
 ags_lfo_synth_util_compute_sin_s16
 ags_lfo_synth_util_compute_sin_s24
@@ -1714,8 +1723,8 @@ ags_time_stretch_util_get_destination_stride
 ags_time_stretch_util_set_destination_stride
 ags_time_stretch_util_get_destination_buffer_length
 ags_time_stretch_util_set_destination_buffer_length
-ags_time_stretch_util_get_buffer_size
-ags_time_stretch_util_set_buffer_size
+ags_time_stretch_util_get_buffer_length
+ags_time_stretch_util_set_buffer_length
 ags_time_stretch_util_get_format
 ags_time_stretch_util_set_format
 ags_time_stretch_util_get_samplerate
@@ -1755,6 +1764,10 @@ ags_buffer_set_format
 ags_buffer_get_data
 ags_buffer_duplicate
 ags_buffer_new
+ags_stream_alloc
+ags_stream_alloc
+ags_stream_alloc
+ags_stream_alloc
 ags_fast_pitch_util_get_type
 ags_fast_pitch_util_alloc
 ags_fast_pitch_util_copy
@@ -1787,8 +1800,6 @@ ags_fast_pitch_util_get_vibrato_lfo_freq
 ags_fast_pitch_util_set_vibrato_lfo_freq
 ags_fast_pitch_util_get_vibrato_tuning
 ags_fast_pitch_util_set_vibrato_tuning
-ags_fast_pitch_util_get_vibrato_lfo_offset
-ags_fast_pitch_util_set_vibrato_lfo_offset
 ags_fast_pitch_util_get_frame_count
 ags_fast_pitch_util_set_frame_count
 ags_fast_pitch_util_get_offset
@@ -1797,6 +1808,14 @@ ags_fast_pitch_util_get_note_256th_mode
 ags_fast_pitch_util_set_note_256th_mode
 ags_fast_pitch_util_get_offset_256th
 ags_fast_pitch_util_set_offset_256th
+ags_fast_pitch_util_pitch_s8
+ags_fast_pitch_util_pitch_s16
+ags_fast_pitch_util_pitch_s24
+ags_fast_pitch_util_pitch_s32
+ags_fast_pitch_util_pitch_s64
+ags_fast_pitch_util_pitch_float
+ags_fast_pitch_util_pitch_double
+ags_fast_pitch_util_pitch_complex
 ags_fast_pitch_util_pitch
 ags_fm_synth_util_get_type
 ags_fm_synth_util_alloc
@@ -1954,6 +1973,8 @@ ags_output_get_type
 ags_output_find_first_input_recycling
 ags_output_find_last_input_recycling
 ags_output_new
+ags_stream_alloc
+ags_stream_alloc
 ags_pitch_2x_alias_util_get_type
 ags_pitch_2x_alias_util_alloc
 ags_pitch_2x_alias_util_copy
@@ -1986,8 +2007,6 @@ ags_pitch_2x_alias_util_get_vibrato_lfo_freq
 ags_pitch_2x_alias_util_set_vibrato_lfo_freq
 ags_pitch_2x_alias_util_get_vibrato_tuning
 ags_pitch_2x_alias_util_set_vibrato_tuning
-ags_pitch_2x_alias_util_get_vibrato_lfo_offset
-ags_pitch_2x_alias_util_set_vibrato_lfo_offset
 ags_pitch_2x_alias_util_get_frame_count
 ags_pitch_2x_alias_util_set_frame_count
 ags_pitch_2x_alias_util_get_offset
@@ -2269,8 +2288,6 @@ ags_tremolo_util_get_tremolo_lfo_freq
 ags_tremolo_util_set_tremolo_lfo_freq
 ags_tremolo_util_get_tremolo_tuning
 ags_tremolo_util_set_tremolo_tuning
-ags_tremolo_util_get_tremolo_lfo_offset
-ags_tremolo_util_set_tremolo_lfo_offset
 ags_tremolo_util_get_frame_count
 ags_tremolo_util_set_frame_count
 ags_tremolo_util_get_offset
@@ -2316,6 +2333,14 @@ ags_envelope_util_get_frame_count
 ags_envelope_util_set_frame_count
 ags_envelope_util_get_offset
 ags_envelope_util_set_offset
+ags_envelope_util_compute_s8
+ags_envelope_util_compute_s16
+ags_envelope_util_compute_s24
+ags_envelope_util_compute_s32
+ags_envelope_util_compute_s64
+ags_envelope_util_compute_float
+ags_envelope_util_compute_double
+ags_envelope_util_compute_complex
 ags_envelope_util_compute
 ags_synth_generator_get_type
 ags_synth_generator_get_obj_mutex
@@ -2427,21 +2452,36 @@ ags_pulse_devout_switch_buffer_flag
 ags_pulse_devout_adjust_delay_and_attack
 ags_pulse_devout_realloc_buffer
 ags_pulse_devout_new
+ags_complex_set
+ags_complex_set
+ags_complex_set
+ags_complex_set
+ags_complex_set
+ags_complex_set
+ags_complex_set
+ags_complex_get
+ags_complex_get
+ags_complex_get
+ags_complex_get
+ags_complex_get
+ags_complex_get
+ags_complex_get
 ags_fourier_transform_util_get_type
-ags_complex_set
-ags_complex_set
-ags_complex_set
-ags_complex_set
-ags_complex_set
-ags_complex_set
-ags_complex_set
-ags_complex_get
-ags_complex_get
-ags_complex_get
-ags_complex_get
-ags_complex_get
-ags_complex_get
-ags_complex_get
+ags_fourier_transform_util_alloc
+ags_fourier_transform_util_copy
+ags_fourier_transform_util_free
+ags_fourier_transform_util_get_source
+ags_fourier_transform_util_set_source
+ags_fourier_transform_util_get_source_stride
+ags_fourier_transform_util_set_source_stride
+ags_fourier_transform_util_get_frequency_domain
+ags_fourier_transform_util_set_frequency_domain
+ags_fourier_transform_util_get_buffer_length
+ags_fourier_transform_util_set_buffer_length
+ags_fourier_transform_util_get_format
+ags_fourier_transform_util_set_format
+ags_fourier_transform_util_get_samplerate
+ags_fourier_transform_util_set_samplerate
 ags_fourier_transform_util_compute_stft_s8
 ags_fourier_transform_util_compute_stft_s16
 ags_fourier_transform_util_compute_stft_s24
@@ -2450,6 +2490,7 @@ ags_fourier_transform_util_compute_stft_s64
 ags_fourier_transform_util_compute_stft_float
 ags_fourier_transform_util_compute_stft_double
 ags_fourier_transform_util_compute_stft_complex
+ags_fourier_transform_util_compute_stft
 ags_fourier_transform_util_inverse_stft_s8
 ags_fourier_transform_util_inverse_stft_s16
 ags_fourier_transform_util_inverse_stft_s24
@@ -2458,6 +2499,7 @@ ags_fourier_transform_util_inverse_stft_s64
 ags_fourier_transform_util_inverse_stft_float
 ags_fourier_transform_util_inverse_stft_double
 ags_fourier_transform_util_inverse_stft_complex
+ags_fourier_transform_util_inverse_stft
 ags_sound_container_get_type
 ags_sound_container_open
 ags_sound_container_get_level_count
@@ -2802,6 +2844,14 @@ ags_fluid_interpolate_none_util_get_note_256th_mode
 ags_fluid_interpolate_none_util_set_note_256th_mode
 ags_fluid_interpolate_none_util_get_offset_256th
 ags_fluid_interpolate_none_util_set_offset_256th
+ags_fluid_interpolate_none_util_pitch_s8
+ags_fluid_interpolate_none_util_pitch_s16
+ags_fluid_interpolate_none_util_pitch_s24
+ags_fluid_interpolate_none_util_pitch_s32
+ags_fluid_interpolate_none_util_pitch_s64
+ags_fluid_interpolate_none_util_pitch_float
+ags_fluid_interpolate_none_util_pitch_double
+ags_fluid_interpolate_none_util_pitch_complex
 ags_fluid_interpolate_none_util_pitch
 ags_diatonic_scale_get_type
 ags_diatonic_scale_note_to_midi_key
@@ -2850,6 +2900,14 @@ ags_chorus_util_get_note_256th_mode
 ags_chorus_util_set_note_256th_mode
 ags_chorus_util_get_offset_256th
 ags_chorus_util_set_offset_256th
+ags_chorus_util_compute_s8
+ags_chorus_util_compute_s16
+ags_chorus_util_compute_s24
+ags_chorus_util_compute_s32
+ags_chorus_util_compute_s64
+ags_chorus_util_compute_float
+ags_chorus_util_compute_double
+ags_chorus_util_compute_complex
 ags_chorus_util_compute
 ags_sequencer_util_get_type
 ags_sequencer_util_get_obj_mutex
@@ -3359,11 +3417,23 @@ ags_fluid_interpolate_7th_order_util_get_note_256th_mode
 ags_fluid_interpolate_7th_order_util_set_note_256th_mode
 ags_fluid_interpolate_7th_order_util_get_offset_256th
 ags_fluid_interpolate_7th_order_util_set_offset_256th
+ags_fluid_interpolate_7th_order_util_pitch_s8
+ags_fluid_interpolate_7th_order_util_pitch_s16
+ags_fluid_interpolate_7th_order_util_pitch_s24
+ags_fluid_interpolate_7th_order_util_pitch_s32
+ags_fluid_interpolate_7th_order_util_pitch_s64
+ags_fluid_interpolate_7th_order_util_pitch_float
+ags_fluid_interpolate_7th_order_util_pitch_double
+ags_fluid_interpolate_7th_order_util_pitch_complex
 ags_fluid_interpolate_7th_order_util_pitch
+ags_audio_buffer_util_alloc
+ags_resample_util_alloc
+ags_fluid_interpolate_4th_order_util_alloc
+ags_volume_util_alloc
 ags_sfz_synth_util_get_type
 ags_sfz_synth_util_loop_mode_get_type
 ags_sfz_synth_util_alloc
-ags_sfz_synth_util_boxed_copy
+ags_sfz_synth_util_copy
 ags_sfz_synth_util_free
 ags_sfz_synth_util_get_sfz_file
 ags_sfz_synth_util_set_sfz_file
@@ -3411,6 +3481,9 @@ ags_sfz_synth_util_compute_float
 ags_sfz_synth_util_compute_double
 ags_sfz_synth_util_compute_complex
 ags_sfz_synth_util_compute
+ags_stream_alloc
+ags_stream_alloc
+ags_linear_interpolate_util_alloc
 ags_hq_pitch_util_get_type
 ags_hq_pitch_util_alloc
 ags_hq_pitch_util_copy
@@ -3443,8 +3516,6 @@ ags_hq_pitch_util_get_vibrato_lfo_freq
 ags_hq_pitch_util_set_vibrato_lfo_freq
 ags_hq_pitch_util_get_vibrato_tuning
 ags_hq_pitch_util_set_vibrato_tuning
-ags_hq_pitch_util_get_vibrato_lfo_offset
-ags_hq_pitch_util_set_vibrato_lfo_offset
 ags_hq_pitch_util_get_frame_count
 ags_hq_pitch_util_set_frame_count
 ags_hq_pitch_util_get_offset
@@ -3571,6 +3642,14 @@ ags_fluid_interpolate_4th_order_util_get_note_256th_mode
 ags_fluid_interpolate_4th_order_util_set_note_256th_mode
 ags_fluid_interpolate_4th_order_util_get_offset_256th
 ags_fluid_interpolate_4th_order_util_set_offset_256th
+ags_fluid_interpolate_4th_order_util_pitch_s8
+ags_fluid_interpolate_4th_order_util_pitch_s16
+ags_fluid_interpolate_4th_order_util_pitch_s24
+ags_fluid_interpolate_4th_order_util_pitch_s32
+ags_fluid_interpolate_4th_order_util_pitch_s64
+ags_fluid_interpolate_4th_order_util_pitch_float
+ags_fluid_interpolate_4th_order_util_pitch_double
+ags_fluid_interpolate_4th_order_util_pitch_complex
 ags_fluid_interpolate_4th_order_util_pitch
 ags_synth_util_get_type
 ags_synth_util_alloc
@@ -3703,6 +3782,8 @@ ags_program_find_control_name
 ags_program_get_value
 ags_program_filter
 ags_program_new
+ags_stream_alloc
+ags_stream_alloc
 ags_pitch_4x_alias_util_get_type
 ags_pitch_4x_alias_util_alloc
 ags_pitch_4x_alias_util_copy
@@ -3735,8 +3816,6 @@ ags_pitch_4x_alias_util_get_vibrato_lfo_freq
 ags_pitch_4x_alias_util_set_vibrato_lfo_freq
 ags_pitch_4x_alias_util_get_vibrato_tuning
 ags_pitch_4x_alias_util_set_vibrato_tuning
-ags_pitch_4x_alias_util_get_vibrato_lfo_offset
-ags_pitch_4x_alias_util_set_vibrato_lfo_offset
 ags_pitch_4x_alias_util_get_frame_count
 ags_pitch_4x_alias_util_set_frame_count
 ags_pitch_4x_alias_util_get_offset
@@ -3904,8 +3983,6 @@ ags_wah_wah_util_get_wah_wah_lfo_freq
 ags_wah_wah_util_set_wah_wah_lfo_freq
 ags_wah_wah_util_get_wah_wah_tuning
 ags_wah_wah_util_set_wah_wah_tuning
-ags_wah_wah_util_get_wah_wah_lfo_offset
-ags_wah_wah_util_set_wah_wah_lfo_offset
 ags_wah_wah_util_get_frame_count
 ags_wah_wah_util_set_frame_count
 ags_wah_wah_util_get_offset
@@ -4227,6 +4304,14 @@ ags_fluid_interpolate_linear_util_get_note_256th_mode
 ags_fluid_interpolate_linear_util_set_note_256th_mode
 ags_fluid_interpolate_linear_util_get_offset_256th
 ags_fluid_interpolate_linear_util_set_offset_256th
+ags_fluid_interpolate_linear_util_pitch_s8
+ags_fluid_interpolate_linear_util_pitch_s16
+ags_fluid_interpolate_linear_util_pitch_s24
+ags_fluid_interpolate_linear_util_pitch_s32
+ags_fluid_interpolate_linear_util_pitch_s64
+ags_fluid_interpolate_linear_util_pitch_float
+ags_fluid_interpolate_linear_util_pitch_double
+ags_fluid_interpolate_linear_util_pitch_complex
 ags_fluid_interpolate_linear_util_pitch
 ags_sound_ability_flags_get_type
 ags_sound_behaviour_flags_get_type
@@ -4466,6 +4551,14 @@ ags_fluid_iir_filter_util_get_q_lin
 ags_fluid_iir_filter_util_set_q_lin
 ags_fluid_iir_filter_util_get_filter_gain
 ags_fluid_iir_filter_util_set_filter_gain
+ags_fluid_iir_filter_util_process_s8
+ags_fluid_iir_filter_util_process_s16
+ags_fluid_iir_filter_util_process_s24
+ags_fluid_iir_filter_util_process_s32
+ags_fluid_iir_filter_util_process_s64
+ags_fluid_iir_filter_util_process_float
+ags_fluid_iir_filter_util_process_double
+ags_fluid_iir_filter_util_process_complex
 ags_fluid_iir_filter_util_process
 ags_sequencer_thread_get_type
 ags_sequencer_thread_interval_timeout
@@ -4768,6 +4861,8 @@ ags_automation_find_specifier_with_type_and_line
 ags_automation_filter
 ags_automation_get_value
 ags_automation_new
+ags_stream_alloc
+ags_stream_alloc
 ags_pitch_16x_alias_util_get_type
 ags_pitch_16x_alias_util_alloc
 ags_pitch_16x_alias_util_copy
@@ -4800,8 +4895,6 @@ ags_pitch_16x_alias_util_get_vibrato_lfo_freq
 ags_pitch_16x_alias_util_set_vibrato_lfo_freq
 ags_pitch_16x_alias_util_get_vibrato_tuning
 ags_pitch_16x_alias_util_set_vibrato_tuning
-ags_pitch_16x_alias_util_get_vibrato_lfo_offset
-ags_pitch_16x_alias_util_set_vibrato_lfo_offset
 ags_pitch_16x_alias_util_get_frame_count
 ags_pitch_16x_alias_util_set_frame_count
 ags_pitch_16x_alias_util_get_offset
