implemented AgsVector256thManager

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -4946,6 +4946,14 @@ ags_port_get_automation
 ags_port_add_automation
 ags_port_remove_automation
 ags_port_new
+ags_vector_256_manager_get_type
+ags_vector_arr_alloc
+ags_vector_arr_free
+ags_vector_256_manager_reserve_all
+ags_vector_256_manager_try_acquire
+ags_vector_256_manager_release
+ags_vector_256_manager_get_instance
+ags_vector_256_manager_new
 ags_notation_get_type
 ags_notation_flags_get_type
 ags_notation_get_obj_mutex
