faster copy code

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1699,6 +1699,16 @@ ags_audio_buffer_util_fetch_v8s32
 ags_audio_buffer_util_fetch_v8s64
 ags_audio_buffer_util_fetch_v8float
 ags_audio_buffer_util_fetch_v8double
+ags_audio_buffer_util_fill_v8double_from_s8
+ags_audio_buffer_util_fill_v8double_from_s16
+ags_audio_buffer_util_fill_v8double_from_s32
+ags_audio_buffer_util_fill_v8double_from_s64
+ags_audio_buffer_util_fill_v8double_from_float
+ags_audio_buffer_util_fetch_v8double_as_s8
+ags_audio_buffer_util_fetch_v8double_as_s16
+ags_audio_buffer_util_fetch_v8double_as_s32
+ags_audio_buffer_util_fetch_v8double_as_s64
+ags_audio_buffer_util_fetch_v8double_as_float
 ags_audio_buffer_util_copy_buffer_to_buffer
 ags_frequency_map_manager_get_type
 ags_frequency_map_manager_test_flags
@@ -4951,6 +4961,7 @@ ags_vector_arr_alloc
 ags_vector_arr_free
 ags_vector_256_manager_reserve_all
 ags_vector_256_manager_try_acquire
+ags_vector_256_manager_try_acquire_dual
 ags_vector_256_manager_release
 ags_vector_256_manager_get_instance
 ags_vector_256_manager_new
