optimized ags/audio/ags_audio_buffer_util.c

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1699,6 +1699,16 @@ ags_audio_buffer_util_fetch_v8s32
 ags_audio_buffer_util_fetch_v8s64
 ags_audio_buffer_util_fetch_v8float
 ags_audio_buffer_util_fetch_v8double
+ags_audio_buffer_util_fill_v8float_from_s8
+ags_audio_buffer_util_fill_v8float_from_s16
+ags_audio_buffer_util_fill_v8float_from_s32
+ags_audio_buffer_util_fill_v8float_from_s64
+ags_audio_buffer_util_fill_v8float_from_double
+ags_audio_buffer_util_fetch_v8float_as_s8
+ags_audio_buffer_util_fetch_v8float_as_s16
+ags_audio_buffer_util_fetch_v8float_as_s32
+ags_audio_buffer_util_fetch_v8float_as_s64
+ags_audio_buffer_util_fetch_v8float_as_double
 ags_audio_buffer_util_fill_v8double_from_s8
 ags_audio_buffer_util_fill_v8double_from_s16
 ags_audio_buffer_util_fill_v8double_from_s32
