--- a/ags/test/plugin/meson.build
+++ b/ags/test/plugin/meson.build
@@ -53,7 +53,7 @@ foreach static_test : static_tests
   static_test_bin = executable(
     static_test,
     source,
-    c_args: [compiler_flags, srcdir_def],
+    c_args: [compiler_test_flags, srcdir_def],
     include_directories: [includes],
     dependencies: [static_test_dependencies],
     link_with: [
