--- a/ags/meson.build
+++ b/ags/meson.build
@@ -415,6 +415,7 @@ libags_audio_sources = files(
   'audio/ags_time_stretch_util.c',
   'audio/ags_track.c',
   'audio/ags_tremolo_util.c',
+  'audio/ags_vector_256_manager.c',
   'audio/ags_volume_util.c',
   'audio/ags_wah_wah_util.c',
   'audio/ags_wave.c',
@@ -1563,6 +1564,7 @@ libags_audio_audio_headers = [
   'audio/ags_sfz_synth_generator.h',
   'audio/ags_sfz_synth_util.h',
   'audio/ags_sound_enums.h',
+  'audio/ags_sound_types.h',
   'audio/ags_sound_provider.h',
   'audio/ags_soundcard_util.h',
   'audio/ags_synth_enums.h',
@@ -1571,6 +1573,7 @@ libags_audio_audio_headers = [
   'audio/ags_time_stretch_util.h',
   'audio/ags_track.h',
   'audio/ags_tremolo_util.h',
+  'audio/ags_vector_256_manager.h',
   'audio/ags_volume_util.h',
   'audio/ags_wah_wah_util.h',
   'audio/ags_wave.h',
