implemented AgsVDSP256Manager and audio buffer util functions

--- a/Makefile.am
+++ b/Makefile.am
@@ -1399,6 +1399,7 @@ libags_audio_h_sources = \
 	ags/audio/ags_track.h \
 	ags/audio/ags_tremolo_util.h \
 	ags/audio/ags_vector_256_manager.h \
+	ags/audio/ags_vdsp_256_manager.h \
 	ags/audio/ags_volume_util.h \
 	ags/audio/ags_wah_wah_util.h \
 	ags/audio/ags_wave.h
@@ -1502,6 +1503,7 @@ libags_audio_c_sources = \
 	ags/audio/ags_track.c \
 	ags/audio/ags_tremolo_util.c \
 	ags/audio/ags_vector_256_manager.c \
+	ags/audio/ags_vdsp_256_manager.c \
 	ags/audio/ags_volume_util.c \
 	ags/audio/ags_wah_wah_util.c \
 	ags/audio/ags_wave.c
