--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1687,6 +1687,28 @@ ags_audio_buffer_util_copy_complex_to_s64
 ags_audio_buffer_util_copy_complex_to_float
 ags_audio_buffer_util_copy_complex_to_double
 ags_audio_buffer_util_copy_complex_to_float32
+ags_audio_buffer_util_put_float
+ags_audio_buffer_util_put_double
+ags_audio_buffer_util_put_float_from_s8
+ags_audio_buffer_util_put_float_from_s16
+ags_audio_buffer_util_put_float_from_s32
+ags_audio_buffer_util_put_float_from_s64
+ags_audio_buffer_util_put_float_from_double
+ags_audio_buffer_util_get_float_as_s8
+ags_audio_buffer_util_get_float_as_s16
+ags_audio_buffer_util_get_float_as_s32
+ags_audio_buffer_util_get_float_as_s64
+ags_audio_buffer_util_get_float_as_double
+ags_audio_buffer_util_put_double_from_s8
+ags_audio_buffer_util_put_double_from_s16
+ags_audio_buffer_util_put_double_from_s32
+ags_audio_buffer_util_put_double_from_s64
+ags_audio_buffer_util_put_double_from_float
+ags_audio_buffer_util_get_double_as_s8
+ags_audio_buffer_util_get_double_as_s16
+ags_audio_buffer_util_get_double_as_s32
+ags_audio_buffer_util_get_double_as_s64
+ags_audio_buffer_util_get_double_as_float
 ags_audio_buffer_util_fill_v8s8
 ags_audio_buffer_util_fill_v8s16
 ags_audio_buffer_util_fill_v8s32
@@ -3960,6 +3982,15 @@ ags_jack_devout_switch_buffer_flag
 ags_jack_devout_adjust_delay_and_attack
 ags_jack_devout_realloc_buffer
 ags_jack_devout_new
+ags_vdsp_256_manager_get_type
+ags_vdsp_arr_alloc
+ags_vdsp_arr_free
+ags_vdsp_256_manager_reserve_all
+ags_vdsp_256_manager_try_acquire
+ags_vdsp_256_manager_try_acquire_dual
+ags_vdsp_256_manager_release
+ags_vdsp_256_manager_get_instance
+ags_vdsp_256_manager_new
 ags_preset_get_type
 ags_preset_error_quark
 ags_preset_get_obj_mutex
