--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -1687,8 +1687,21 @@ ags_audio_buffer_util_copy_complex_to_s64
 ags_audio_buffer_util_copy_complex_to_float
 ags_audio_buffer_util_copy_complex_to_double
 ags_audio_buffer_util_copy_complex_to_float32
+ags_audio_buffer_util_put_int
 ags_audio_buffer_util_put_float
 ags_audio_buffer_util_put_double
+ags_audio_buffer_util_put_int_from_s8
+ags_audio_buffer_util_put_int_from_s16
+ags_audio_buffer_util_put_int_from_s32
+ags_audio_buffer_util_put_int_from_s64
+ags_audio_buffer_util_put_int_from_float
+ags_audio_buffer_util_put_int_from_double
+ags_audio_buffer_util_get_int_as_s8
+ags_audio_buffer_util_get_int_as_s16
+ags_audio_buffer_util_get_int_as_s32
+ags_audio_buffer_util_get_int_as_s64
+ags_audio_buffer_util_get_int_as_float
+ags_audio_buffer_util_get_int_as_double
 ags_audio_buffer_util_put_float_from_s8
 ags_audio_buffer_util_put_float_from_s16
 ags_audio_buffer_util_put_float_from_s32
@@ -3988,6 +4001,7 @@ ags_vdsp_arr_free
 ags_vdsp_256_manager_reserve_all
 ags_vdsp_256_manager_try_acquire
 ags_vdsp_256_manager_try_acquire_dual
+ags_vdsp_256_manager_try_acquire_triple
 ags_vdsp_256_manager_release
 ags_vdsp_256_manager_get_instance
 ags_vdsp_256_manager_new
