optimized ags_envelope_util.c

--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -4002,6 +4002,7 @@ ags_vdsp_256_manager_reserve_all
 ags_vdsp_256_manager_try_acquire
 ags_vdsp_256_manager_try_acquire_dual
 ags_vdsp_256_manager_try_acquire_triple
+ags_vdsp_256_manager_try_acquire_quad
 ags_vdsp_256_manager_release
 ags_vdsp_256_manager_get_instance
 ags_vdsp_256_manager_new
@@ -5017,6 +5018,7 @@ ags_vector_arr_free
 ags_vector_256_manager_reserve_all
 ags_vector_256_manager_try_acquire
 ags_vector_256_manager_try_acquire_dual
+ags_vector_256_manager_try_acquire_triple
 ags_vector_256_manager_release
 ags_vector_256_manager_get_instance
 ags_vector_256_manager_new
