--- a/configure.ac
+++ b/configure.ac
@@ -7,11 +7,11 @@
 # without any warranty.
 # Process this file with autoconf to produce a configure script.
 
-LT_CURRENT=6
-LT_REVISION=16
-LT_AGE=23
+LT_CURRENT=7
+LT_REVISION=0
+LT_AGE=0
 
-m4_define([ags_version], [6.16.23])
+m4_define([ags_version], [7.0.0-pre1])
 
 AC_PREREQ([2.69])
 AC_INIT([gsequencer],m4_defn([ags_version]),[jkraehemann@gmail.com])
