minor bug-fixes

--- a/configure.ac
+++ b/configure.ac
@@ -11,7 +11,7 @@ LT_CURRENT=7
 LT_REVISION=0
 LT_AGE=0
 
-m4_define([ags_version], [7.0.0-pre1])
+m4_define([ags_version], [7.0.0])
 
 AC_PREREQ([2.69])
 AC_INIT([gsequencer],m4_defn([ags_version]),[jkraehemann@gmail.com])
