--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -3361,66 +3361,97 @@ ags_midi_ci_util_copy
 ags_midi_ci_util_generate_muid
 ags_midi_ci_util_put_muid
 ags_midi_ci_util_get_muid
+ags_midi_ci_util_put_muid_with_position
+ags_midi_ci_util_get_muid_with_position
+ags_midi_ci_util_is_discovery
 ags_midi_ci_util_put_discovery
 ags_midi_ci_util_get_discovery
+ags_midi_ci_util_is_discovery_reply
 ags_midi_ci_util_put_discovery_reply
 ags_midi_ci_util_get_discovery_reply
+ags_midi_ci_util_is_invalidate_muid
 ags_midi_ci_util_put_invalidate_muid
 ags_midi_ci_util_get_invalidate_muid
+ags_midi_ci_util_is_ack
 ags_midi_ci_util_put_ack
 ags_midi_ci_util_get_ack
+ags_midi_ci_util_is_nak
 ags_midi_ci_util_put_nak
 ags_midi_ci_util_get_nak
+ags_midi_ci_util_is_initiate_protocol_negotiation
 ags_midi_ci_util_put_initiate_protocol_negotiation
 ags_midi_ci_util_get_initiate_protocol_negotiation
+ags_midi_ci_util_is_initiate_protocol_negotiation_reply
 ags_midi_ci_util_put_initiate_protocol_negotiation_reply
 ags_midi_ci_util_get_initiate_protocol_negotiation_reply
+ags_midi_ci_util_is_set_protocol_type
 ags_midi_ci_util_put_set_protocol_type
 ags_midi_ci_util_get_set_protocol_type
+ags_midi_ci_util_is_confirm_protocol_type
 ags_midi_ci_util_put_confirm_protocol_type
 ags_midi_ci_util_get_confirm_protocol_type
+ags_midi_ci_util_is_confirm_protocol_type_reply
 ags_midi_ci_util_put_confirm_protocol_type_reply
 ags_midi_ci_util_get_confirm_protocol_type_reply
+ags_midi_ci_util_is_confirm_protocol_type_established
 ags_midi_ci_util_put_confirm_protocol_type_established
 ags_midi_ci_util_get_confirm_protocol_type_established
+ags_midi_ci_util_is_profile
 ags_midi_ci_util_put_profile
 ags_midi_ci_util_get_profile
+ags_midi_ci_util_is_profile_reply
 ags_midi_ci_util_put_profile_reply
 ags_midi_ci_util_get_profile_reply
+ags_midi_ci_util_is_profile_enabled_report
 ags_midi_ci_util_put_profile_enabled_report
 ags_midi_ci_util_get_profile_enabled_report
+ags_midi_ci_util_is_profile_disabled_report
 ags_midi_ci_util_put_profile_disabled_report
 ags_midi_ci_util_get_profile_disabled_report
+ags_midi_ci_util_is_profile_added
 ags_midi_ci_util_put_profile_added
 ags_midi_ci_util_get_profile_added
+ags_midi_ci_util_is_profile_removed
 ags_midi_ci_util_put_profile_removed
 ags_midi_ci_util_get_profile_removed
+ags_midi_ci_util_is_profile_specific_data
 ags_midi_ci_util_put_profile_specific_data
 ags_midi_ci_util_get_profile_specific_data
 ags_midi_ci_util_put_property_exchange_capabilities
 ags_midi_ci_util_get_property_exchange_capabilities
 ags_midi_ci_util_put_property_exchange_capabilities_reply
 ags_midi_ci_util_get_property_exchange_capabilities_reply
+ags_midi_ci_util_is_get_property_data
 ags_midi_ci_util_put_get_property_data
 ags_midi_ci_util_get_get_property_data
+ags_midi_ci_util_is_get_property_data_reply
 ags_midi_ci_util_put_get_property_data_reply
 ags_midi_ci_util_get_get_property_data_reply
+ags_midi_ci_util_is_set_property_data
 ags_midi_ci_util_put_set_property_data
 ags_midi_ci_util_get_set_property_data
+ags_midi_ci_util_is_set_property_data_reply
 ags_midi_ci_util_put_set_property_data_reply
 ags_midi_ci_util_get_set_property_data_reply
+ags_midi_ci_util_is_subscription
 ags_midi_ci_util_put_subscription
 ags_midi_ci_util_get_subscription
+ags_midi_ci_util_is_subscription_reply
 ags_midi_ci_util_put_subscription_reply
 ags_midi_ci_util_get_subscription_reply
+ags_midi_ci_util_is_process_capabilities
 ags_midi_ci_util_put_process_capabilities
 ags_midi_ci_util_get_process_capabilities
+ags_midi_ci_util_is_process_capabilities_reply
 ags_midi_ci_util_put_process_capabilities_reply
 ags_midi_ci_util_get_process_capabilities_reply
+ags_midi_ci_util_is_message_report
 ags_midi_ci_util_put_message_report
 ags_midi_ci_util_get_message_report
+ags_midi_ci_util_is_message_report_reply
 ags_midi_ci_util_put_message_report_reply
 ags_midi_ci_util_get_message_report_reply
+ags_midi_ci_util_is_end_of_message_report
 ags_midi_ci_util_put_end_of_message_report
 ags_midi_ci_util_get_end_of_message_report
 ags_midi_ci_1_1_port_get_type
