--- a/libags_audio.sym.in
+++ b/libags_audio.sym.in
@@ -4317,6 +4317,8 @@ ags_channel_get_input_soundcard
 ags_channel_set_input_soundcard
 ags_channel_get_input_soundcard_channel
 ags_channel_set_input_soundcard_channel
+ags_channel_get_first_recycling
+ags_channel_get_last_recycling
 ags_channel_get_samplerate
 ags_channel_set_samplerate
 ags_channel_get_buffer_size
